--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/webdevent/spotify-clone.git",
+  "homepage": "https://webdevent.github.io/spotify-clone",
   "name": "e-commerce",
   "private": true,
   "version": "0.0.0",
