--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://webdevent.github.io/spotify-clone",
-  "name": "e-commerce",
+  "homepage": "https://webdevent.github.io/spotify-clone/",
+  "name": "spotify-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
